packages/block-library/src/pullquote/editor.scss
.wp-block-pullquote.has-text-align-left,
.wp-block-pullquote.has-text-align-right,
.wp-block[data-align="left"] > .wp-block-pullquote,
.wp-block[data-align="right"] > .wp-block-pullquote {
	& p {
		font-size: 20px;
	}
}

.wp-block-pullquote {
	& blockquote p {
		font-size: 28px;
		line-height: 1.6;
	}
}

// .is-style-solid-color is deprecated.
.wp-block-pullquote.is-style-solid-color {
	& blockquote p {
		font-size: 32px;
	}

	.wp-block-pullquote__citation {
		text-transform: none;
		font-style: normal;
	}
}

.wp-block-pullquote .wp-block-pullquote__citation {
	color: inherit;
}

